--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ ul {
   list-style: none;
 }
 
-a {
+a, .hero{
   text-decoration: none;
   color: #e5e7eb;
   font-size: 18px;
@@ -32,4 +32,59 @@ a {
 .content {
   display: flex;
   flex-direction: column;
+  margin: 0px 50px;
+}
+
+.area-one {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  margin: 30px 0px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  padding: 0px;
+}
+
+.hero-image {
+  /*background-color: #e5e7eb;*/
+  color: #1f2937;
+  flex: 1;
+  max-width: 500px;
+  max-height: 250px;
+}
+
+h1 {
+  font-size: 48px;
+  font-weight: 800;
+  text-align: left;
+  margin: 12px 0px;
+}
+
+
+img {
+  max-height: 300px;
+  width: auto;
+  border-width: 5px;
+  border-color: #3e475a;
+  border-style: solid;
+  border-radius: 15px;
+  flex: 0 1 auto;
+}
+
+.hero-text {
+  text-align: left;
+  margin: 0px 0px 30px;
+}
+
+.hero-button {
+  height: 50px;
+  width: 150px;
+  background-color: #2f4566;
+  color: #e5e7eb;
+  font-weight: 700;
+  font-size: 16pt;
+  border-radius: 10px;
 }
