--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,14 @@ a, .hero{
   display: flex;
   flex-direction: column;
   margin: 0px 50px;
+  /*padding: 0px 50px;*/
 }
 
 .area-one {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex: 1;
+  column-gap: 70px;
   margin: 30px 0px;
 }
 
@@ -83,7 +85,7 @@ img {
   box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.459);
 }
 
-@media (max-width: 850px) {
+@media (max-width: 900px) {
   .area-one {
     flex-direction: column-reverse;
     align-items: center;
@@ -102,7 +104,7 @@ img {
 
 .area-two {
   padding: 15px 50px 100px 50px;
-  margin: 10px 0px;
+  margin: 10px 5%;
   background-color: #f9faf8;
   color: #1f2937;
   border-radius: 5px;
@@ -115,8 +117,8 @@ img {
 .img-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 15px;
+  justify-content: center;
+  gap: 30px;
 }
 .img-content {
   height: 200px;
@@ -128,7 +130,7 @@ img {
 }
 .area-three {
   padding: 100px;
-  margin: 10px 0px;
+  margin: 10px 5%;
   background-color: #abacaf;
   color: #1f2937;
   border-radius: 5px;
@@ -137,7 +139,7 @@ img {
 
 .area-four {
   padding: 100px;
-  margin: 10px 0px;
+  margin: 10px 5%;
   background-color: #f9faf8;
   color: #1f2937;
   border-radius: 5px;
