--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
+@font-face {
+  font-family: Roboto;
+  src: url(Roboto/Roboto-Light.ttf);
+}
+
 body {
   background-color: #1f2937;
   color: white;
+  font-family: Roboto;
   padding: 5px 14px;
   text-align: center;
 }
@@ -83,23 +89,7 @@ img {
   font-size: 16pt;
   border-radius: 10px;
   box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.459);
-}
-
-@media (max-width: 900px) {
-  .area-one {
-    flex-direction: column-reverse;
-    align-items: center;
-  }
-
-  .hero,
-  h1,
-  .hero-text {
-    text-align: center;
-  }
-
-  .hero {
-    align-items: center;
-  }
+  flex: 0 0 auto;
 }
 
 .area-two {
@@ -135,6 +125,15 @@ img {
   color: #1f2937;
   border-radius: 5px;
   box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.459);
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 100;
+}
+
+.person {
+  font-style: normal;
+  font-weight: 700;
+  text-align: right;
 }
 
 .area-four {
@@ -144,4 +143,38 @@ img {
   color: #1f2937;
   border-radius: 5px;
   box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.459);
+}
+
+.action-holder {
+  background-color: dodgerblue;
+  color: #f9faf8;
+  text-align: left;
+  border-radius: 10px;
+  padding: 20px 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@media (max-width: 900px) {
+  .area-one {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .action-holder {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .hero,
+  h1,
+  .hero-text {
+    text-align: center;
+  }
+
+  .hero {
+    align-items: center;
+  }
 }
