--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ h1 {
 }
 
 
-img {
+.hero-img {
   max-height: 300px;
   width: auto;
   border-width: 5px;
@@ -110,13 +110,21 @@ img {
   justify-content: center;
   gap: 30px;
 }
-.img-content {
-  height: 200px;
-  width: 200px;
-  border-style: solid;
-  border-width: 8px;
-  border-color: #3e475a;
-  border-radius: 10px;
+
+.img-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 250px;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+  object-fit: fill;
+  border: 8px solid #3e475a;
+  border-radius: 2px;
+  box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.459);
 }
 .area-three {
   padding: 100px;
@@ -154,6 +162,11 @@ img {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.icons8 {
+  font-size: 16px;
+  text-decoration: underline;
 }
 
 @media (max-width: 900px) {
