--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ h1 {
 img {
   height: 100%;
   width: 100%;
-  object-fit: fill;
+  object-fit: cover;
   border: 8px solid #2f283b;
   border-radius: 8px;
   box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.459);
